# strolid-meetings

./: .gitignore  AGENTS.md  Dockerfile  README.md  deploy_all.ps1  pyproject.toml
chatbot/: agent.py  server.py  verify_all.py
docs/: gemini-enterprise-eval.md
frontend/: .firebaserc  firebase.json  firestore.rules  package-lock.json  package.json
original-docs/: 1-on-1 Joe and Michael - 2025_07_01 10_55 EDT - Notes by Gemini.docx  9 FAQs_ Why Dealers Should Consider Strolid.docx  Call with Michael - 2025_12_05 12_59 EST - Notes by Gemini.docx  Catch Up on Marketing Activities - 2026_02_20 11_28 EST - Notes by Gemini.docx  Hierarchy and Direct Supervisor Discussion - 2025_11_26 15_09 EST - Notes by Gemini.docx  Homepage Hero Session - 2025_09_23 15_10 EDT - Notes by Gemini.docx  I think the real issue is that the.txt  Jake and Link Marketing Hooks.docx  Jason _ Michael - 2025_09_16 10_59 EDT - Notes by Gemini.docx  Joe and Michael Catch-up - 2025_12_04 13_59 EST - Notes by Gemini.docx  Joe and Michael Reconnect - 2025_12_30 14_58 EST - Notes by Gemini.docx  Joe and Michael Regroup - 2026_02_12 14_27 EST - Notes by Gemini.docx  Joe and Michael Touch base - 2026_01_20 15_28 EST - Notes by Gemini.docx  Marketing - 2026_03_13 15_28 EDT - Notes by Gemini.docx  Marketing 90-day Prioritization - 2025_12_23 09_58 EST - Notes by Gemini.docx  Marketing Flow and Alignment  - 2026_02_13 13_28 EST - Notes by Gemini.docx  Marketing hooks 2 more about people.docx  Marketing hooks 3.docx  Michael _ Jason - 2026_03_27 08_58 EDT - Notes by Gemini.docx  New marketing hooks.docx  (+46 more)
(+160 files in other folders)
